Fix header nav margin on mobile.

--- a/app/assets/scss/shared/_header-footer.scss
+++ b/app/assets/scss/shared/_header-footer.scss
@@ -153,6 +153,10 @@ div.cb_footer_logo {
         background: white;
     }
 
+    #primary-nav {
+        margin: 0 0.9375rem;
+    }
+
     #sub-nav li {
         float: left;
     }
